--- a/templates/bands.html
+++ b/templates/bands.html
@@ -23,6 +23,10 @@
     <main>
         <section id="bands">
             <h2>Bands</h2>
+            <form method="GET" action="/bands">
+                <input type="text" name="search" placeholder="Search for bands...">
+                <button type="submit">Search</button>
+            </form>
             <div class="band-list">
                 <div class="band-item">
                     <img src="../static/images/Pink-Floyd.webp" alt="Band 1">
