--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <header>
-        <h1>Rock Music Database</h1>
+        <h1>Rock Hometown</h1>
         <nav>
             <ul>
                 <li><a href="{{ url_for('index') }}">Home</a></li>
@@ -41,7 +41,7 @@
     </header>
     <main>
         <section id="home">
-            <h2>Welcome to Rock Music Database</h2>
+            <h2>Welcome to Rock Hometown</h2>
             <p>Discover the world of rock music, learn about your favorite bands and albums.</p>
         </section>
     </main>
