--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -107,6 +107,7 @@
                 <li><a href="{{ url_for('index') }}">Home</a></li>
                 <li><a href="{{ url_for('bands') }}">Bands</a></li>
                 <li><a href="{{ url_for('albums') }}">Albums</a></li>
+                <li><a href="{{ url_for('genre') }}">Genre</a></li>
                 <li><a href="{{ url_for('timeline') }}">Timeline</a></li>
             </ul>
         </nav>
