--- a/templates/bands.html
+++ b/templates/bands.html
@@ -12,28 +12,31 @@
         <h1>Rock Hometown</h1>
         <nav>
             <ul>
-                <li><a href="{{ url_for('index') }}">Home</a></li>
-                <li><a href="{{ url_for('bands') }}">Bands</a></li>
-                <li><a href="{{ url_for('albums') }}">Albums</a></li>
-                <li><a href="{{ url_for('genre') }}">Genre</a></li>
-                <li><a href="{{ url_for('timeline') }}">Timeline</a></li>
+                <li><a href="{{ url_for('index') }}" class="{% if request.endpoint == 'index' %}active{% endif %}">Home</a></li>
+                <li><a href="{{ url_for('bands') }}" class="{% if request.endpoint == 'bands' %}active{% endif %}">Bands</a></li>
+                <li><a href="{{ url_for('albums') }}" class="{% if request.endpoint == 'albums' %}active{% endif %}">Albums</a></li>
+                <li><a href="{{ url_for('genre') }}" class="{% if request.endpoint == 'genre' %}active{% endif %}">Genre</a></li>
+                <li><a href="{{ url_for('timeline') }}" class="{% if request.endpoint == 'timeline' %}active{% endif %}">Timeline</a></li>
+                
             </ul>
         </nav>
     </header>
     <main>
         <section id="bands">
-            <h2>Bands</h2>
-            <form method="GET" action="/bands">
-                <input type="text" name="search" placeholder="Search for bands...">
-                <button type="submit">Search</button>
+            <h2 class="bands-title">Bands</h2>
+
+            <form method="GET" action="/bands" class="search-form">
+                <input type="text" name="search" placeholder="Search for bands..." class="search-input">
+                <button type="submit" class="search-button">Search</button>
             </form>
+            
             <div class="band-list">
                 {% if bands %}
                     {% for band in bands %}
                         <div class="band-item">
                             <img src="{{ url_for('static', filename='images/' + band['image']) }}" alt="{{ band['band_name'] }}">
                             <h3>{{ band['band_name'] }}</h3>
-                            <p>Genre: {{ band['genre'] }}</p>
+                            <p>Genre: {{ band['genre_name'] }}</p>
                             <p>Formed Year: {{ band['formed_year'] }}</p>
                         </div>
                     {% endfor %}
