--- a/static/styles.css
+++ b/static/styles.css
@@ -117,3 +117,119 @@ main {
 .genre-item:hover {
     background-color: #d0d0d0;
 }
+
+
+/* 搜索框和按钮的整体布局 */
+.search-form {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+.search-input {
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.1em;
+    padding: 10px 20px;
+    border: 2px solid #1D1D1F;
+    border-radius: 25px;
+    width: 300px;
+    transition: all 0.3s ease;
+    background-color: #f4f4f4;
+    color: #333;
+    outline: none;
+}
+
+.search-input::placeholder {
+    color: #888;
+}
+
+/* 搜索按钮设计 */
+.search-button {
+    font-family: 'Bangers', cursive;
+    font-size: 1.2em;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 25px;
+    margin-left: 10px;
+    background: linear-gradient(45deg, #1D1D1F, #1D1D2F);
+    color: white;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);
+}
+
+/* 悬停效果 */
+.search-input:hover, .search-input:focus {
+    border-color: #1D1D1F;
+    background-color: white;
+}
+
+.search-button:hover {
+    background: linear-gradient(45deg, #1D1D2F, #1D1D1F);
+    transform: scale(1.05);
+    box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.3);
+}
+
+.bands-title {
+    font-family: 'Bangers', cursive;
+    font-size: 3em; 
+    text-align: center; 
+    color: #1D1D1F; 
+    margin-top: 20px; 
+}
+
+
+.bands-title {
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+
+
+.albums-title {
+    font-family: 'Bangers', cursive;
+    font-size: 3em; 
+    text-align: center;
+    color: #1D1D1F;
+    margin-top: 20px;
+}
+
+
+.albums-title {
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+/* 导航栏样式 */
+nav ul {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    gap: 20px; /* 导航项之间的间隔 */
+}
+
+nav ul li {
+    display: inline;
+}
+/* 导航栏样式 */
+nav ul li a {
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.2em;
+    text-decoration: none;
+    padding: 10px 20px;
+    color: #FBFBFD; /* 默认文字颜色为浅色 */
+    background-color: #1D1D1F; /* 默认背景颜色为深色 */
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+/* 鼠标滑动时按钮变色 */
+nav ul li a:hover {
+    background-color: #FBFBFD;
+    color: #1D1D1F;
+}
+
+/* 当前页面按钮保持高亮 */
+nav ul li a.active {
+    background-color: #FBFBFD; /* 按钮背景变为白色 */
+    color: #1D1D1F; /* 文字变为深色 */
+}
