--- a/templates/login.html
+++ b/templates/login.html
@@ -25,15 +25,19 @@
     </header>
     <main>
         <h1>Login</h1>
-        <form method="POST">
+        
+        <form method="POST" action="/login">
             <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
-            <br>
+            <input type="text" name="username" id="username" required><br>
+            
             <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-            <br>
-            <button type="submit" class="btn">Login</button>
+            <input type="password" name="password" id="password" required><br>
+            
+            <button type="submit">Login</button>
         </form>
+        {% if message %}
+        <p style="color: green;">{{ message }}</p>
+        {% endif %}
         <a href="{{ url_for('index') }}" class="btn">Back to Home</a>
     </main>
 </body>
