--- a/templates/signup.html
+++ b/templates/signup.html
@@ -25,14 +25,10 @@
     </header>
     <main>
         <h1>Sign Up</h1>
-        <form method="POST">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
-            <br>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-            <br>
-            <button type="submit" class="btn">Sign Up</button>
+        <form method="POST" action="/signup">
+            <input type="text" name="username" placeholder="Username" required>
+            <input type="password" name="password" placeholder="Password" required>
+            <button type="submit">Sign Up</button>
         </form>
         <a href="{{ url_for('index') }}" class="btn">Back to Home</a>
     </main>
