--- a/templates/bands.html
+++ b/templates/bands.html
@@ -35,14 +35,21 @@
                     {% for band in bands %}
                         <div class="band-item">
                             <img src="{{ url_for('static', filename='images/' + band['image']) }}" alt="{{ band['band_name'] }}">
-                            <h3>{{ band['band_name'] }}</h3>
+                            <a href="{{ url_for('band_albums', band_id=band['band_id']) }}">
+                                <h2>{{ band['band_name'] }}</h2>
+                            </a>
                             <p>Genre: {{ band['genre_name'] }}</p>
                             <p>Formed Year: {{ band['formed_year'] }}</p>
+                           
                         </div>
                     {% endfor %}
                 {% else %}
                     <p>No bands found.</p>
                 {% endif %}
+
+                {% for band in bands %}
+  
+{% endfor %}
             </div>
         </section>
     </main>
