--- a/templates/signup.html
+++ b/templates/signup.html
@@ -16,18 +16,20 @@
                 <li><a href="{{ url_for('bands') }}">Bands</a></li>
                 <li><a href="{{ url_for('albums') }}">Albums</a></li>
                 <li><a href="{{ url_for('timeline') }}">Timeline</a></li>
+                <a href="{{ url_for('login') }}" class="btn">Login</a>
+            <a href="{{ url_for('signup') }}" class="btn">Sign Up</a>
             </ul>
         </nav>
-        <div>
-            <a href="{{ url_for('login') }}" class="btn">Login</a>
-            <a href="{{ url_for('signup') }}" class="btn">Sign Up</a>
-        </div>
+        
     </header>
     <main>
         <h1>Sign Up</h1>
         <form method="POST" action="/signup">
-            <input type="text" name="username" placeholder="Username" required>
-            <input type="password" name="password" placeholder="Password" required>
+            <label for="username">Username:</label>
+            <input type="text" name="username" placeholder="Username" required><br>
+
+            <label for="password">Password:</label>
+            <input type="password" name="password" placeholder="Password" required><br>
             <button type="submit">Sign Up</button>
         </form>
         {% if message %}
@@ -35,6 +37,7 @@
     {% endif %}
 
         <a href="{{ url_for('index') }}" class="btn">Back to Home</a>
+    <p>Already have an account? <a href="{{ url_for('login') }}">Login here</a></p>
     </main>
 </body>
 </html>
